CMakeLists.txt:   * Make sure that the scripts are called through the root script Lib:   * aggregate_SSE.tcc: only execute if there are actually values in the input BATs

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -14,6 +14,10 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)
 
+IF("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
+    MESSAGE(FATAL_ERROR "You must run cmake on the root diretory!")
+ENDIF()
+
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
     PROJECT(SSBQueries VERSION 0.9 LANGUAGES CXX)
