SSB:   * add query 4.3 variants continuous and with reencoding   * small fix for other query 4.3 variants: add missing delete of intermediate result

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -134,7 +134,7 @@ ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late ssbm-q33_continuou
 ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late ssbm-q34_continuous ssbm-q34_continuous_reenc \
 ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late ssbm-q41_continuous ssbm-q41_continuous_reenc \
 ssbm-q42_normal ssbm-q42_dmr_seq ssbm-q42_early ssbm-q42_late ssbm-q42_continuous ssbm-q42_continuous_reenc \
-ssbm-q43_normal ssbm-q43_dmr_seq ssbm-q43_early ssbm-q43_late")
+ssbm-q43_normal ssbm-q43_dmr_seq ssbm-q43_early ssbm-q43_late ssbm-q43_continuous ssbm-q43_continuous_reenc")
 add_ssb_SSE("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc \
 ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc \
 ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc \
@@ -147,7 +147,7 @@ ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late ssbm-q33_continuou
 ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late ssbm-q34_continuous ssbm-q34_continuous_reenc \
 ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late ssbm-q41_continuous ssbm-q41_continuous_reenc \
 ssbm-q42_normal ssbm-q42_dmr_seq ssbm-q42_early ssbm-q42_late ssbm-q42_continuous ssbm-q42_continuous_reenc \
-ssbm-q43_normal ssbm-q43_dmr_seq ssbm-q43_early ssbm-q43_late")
+ssbm-q43_normal ssbm-q43_dmr_seq ssbm-q43_early ssbm-q43_late ssbm-q43_continuous ssbm-q43_continuous_reenc")
 
 ##############
 ### OPENMP ###
