functors   * fix compilation (missing include <cstring> and std::strcmp) SSE   * add original table-lookup-based pack_right, but set the used pointers to zero (since it is not to be used)   * adapt CMakeLists appropriately test/   * add pack_right µ-Benchmark for different selectivities (data distributions)   * add SSE.cpp which sets the lookup-table-pointers for pack_right   * fix builds for previous lib changes .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,6 @@ CMakeFiles
 /test/functors
 /test/testshufflemask
 /test/testshufflemasktable
+/test/testshufflemask_distributions
 /Debug
 /Release
