add construction of AVX2 shuffle tables adapt build script add print script for testing shuffle with different data distributions (total selectivities for the masks)

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ CMakeFiles
 /eval/dataNewHashjoin2/
 /eval/2017*
 /test/createshufflemaskarrays
+/test/createshufflemaskarrays_avx2
 /test/functors
 /test/testshufflemask
 /test/testshufflemasktable
