work in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,13 @@ ELSE()
     PROJECT(AHEAD LANGUAGES CXX)
 ENDIF()
 
+set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
+set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
+
+set(CMAKE_COLOR_MAKEFILE ON)
+# And optionally
+#set(CMAKE_VERBOSE_MAKEFILE ON)
+
 MESSAGE("AHEAD root CMAKE script. Including lib (Core) and tools (Queries):")
 
 #set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
