--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pcm"]
 	path = pcm
-	url = git@github.com-tuddbresilience:opcm/pcm.git
+	url = https://github.com/tuddbresilience/pcm.git
