adapt tests to current namespace structure of SIMD abstraction layers add ::add() method to AVX2-uint8_t abstraction layer move the mm128 / mm256 template class forward definition into *_base.tcc files for AVX2 add a pack_right3() function which uses multiple SSE4.2 pack_right calls

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@ CMakeFiles
 /test/testshufflemask
 /test/testshufflemasktable
 /test/testshufflemask_distributions
+/test/testshufflemask_distributions_native
+/test/testshufflemask_distributions_avx2
+/test/testshufflemask_distributions_knl
 /Debug
 /Release
