wortk on SSB data generation script
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@ cmake_install.cmake
 CMakeCache.txt
 CMakeFiles
 /build
-/database
 /nbproject/private
+/database/headers
+/database/sf-*
 /eval/data
 /eval/out
 /eval/outNewHashjoin1/
