first clean up for SIGMOD reproducibility
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pcm"]
 	path = pcm
 	url = https://github.com/tuddbresilience/pcm.git
+[submodule "ssb-dbgen"]
+	path = ssb-dbgen
+	url = https://github.com/electrum/ssb-dbgen
