use an ssb-dbgen repo with CMake support
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/tuddbresilience/pcm.git
 [submodule "ssb-dbgen"]
 	path = ssb-dbgen
-	url = https://github.com/electrum/ssb-dbgen
+	url = https://github.com/valco1994/ssb-dbgen
