--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ CMakeCache.txt
 CMakeFiles
 /build
 /nbproject/private
+/database/dbgen
 /database/headers
 /database/sf-*
 /eval/data
@@ -38,5 +39,4 @@ CMakeFiles
 /Release
 .gdb_history
 /pcm
-/ssb-dbgen
 /paper/sigmod2018.log
