--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -71,7 +71,12 @@ MACRO( add_shared_lib target_name arg_source_files )
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 17)
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
     TARGET_INCLUDE_DIRECTORIES(${target_name} PUBLIC "${PCMDIR}")
-    TARGET_LINK_LIBRARIES(${LIBNAME} AHEAD "${LIBPCM}" ffi dl pthread curses boost_system boost_filesystem)
+    IF(LIBPCM)
+        TARGET_LINK_LIBRARIES(${LIBNAME} AHEAD "${LIBPCM}" ffi dl pthread curses boost_system boost_filesystem)
+        TARGET_COMPILE_OPTIONS(${LIBNAME} PUBLIC "-DAHEAD_PCM")
+    ELSE(LIBPCM)
+        TARGET_LINK_LIBRARIES(${LIBNAME} AHEAD ffi dl pthread curses boost_system boost_filesystem)
+    ENDIF(LIBPCM)
 ENDMACRO( add_shared_lib )
 add_shared_lib(SSB "ssbm/ssb.cpp")
 
@@ -87,7 +92,12 @@ MACRO( add_algorithm arg_name arg_path target_name )
     SET_PROPERTY(TARGET ${target_name} PROPERTY CXX_STANDARD 17)
     SET_PROPERTY(TARGET ${target_name} PROPERTY CXX_STANDARD_REQUIRED ON)
 	TARGET_INCLUDE_DIRECTORIES(${target_name} PUBLIC "${PCMDIR}")
-    TARGET_LINK_LIBRARIES(${target_name} ${LIBPCM} AHEAD SSB)
+    IF(LIBPCM)
+        TARGET_LINK_LIBRARIES(${target_name} ${LIBPCM} AHEAD SSB)
+        TARGET_COMPILE_OPTIONS(${LIBNAME} PUBLIC "-DAHEAD_PCM")
+    ELSE(LIBPCM)
+        TARGET_LINK_LIBRARIES(${target_name} AHEAD SSB)
+    ENDIF(LIBPCM)
 ENDMACRO( add_algorithm )
 
 MESSAGE("Generating make scripts for ${PROJECT_NAME} in ${CMAKE_BUILD_TYPE} mode")
