run eval script and move SSB results to paper/results/ssb
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/eval/run.conf
+++ b/eval/run.conf
@@ -1,14 +1,19 @@
 # this config file contains some settings for the evaluation script --- we exported them to this file for convenience
 # this file is intended to be sourced in the "run.sh" bash script
 
-[ -z ${DATE+x} ] && DATE="$(date '+%Y-%m-%d_%H-%M')"
-PATH_BASE="$(pwd)/.."
-PATH_BUILD="${PATH_BASE}/build/Release"
-PATH_DB="${PATH_BASE}/database"
-PATH_EVAL="${PATH_BASE}/eval"
-PATH_EVAL_CURRENT="${PATH_EVAL}/${DATE}"
-PATH_EVALDATA="${PATH_EVAL_CURRENT}/data"
-PATH_EVALOUT="${PATH_EVAL_CURRENT}/report"
-EXEC_ENV="$(which env)"
-EXEC_BASH="$(which bash)"
+if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
+	export AHEAD_EVAL_RUN_CONF=""
 
+	source ../common.conf
+
+	[[ -z ${DATE+x} ]] && export DATE="$(date '+%Y-%m-%d_%H-%M')"
+	export PATH_BASE="$(pwd)/.."
+	export PATH_BUILD="${PATH_BASE}/${AHEAD_BUILD_RELEASE_DIR}"
+	export PATH_DB="${PATH_BASE}/${AHEAD_DB_PATH}"
+	export PATH_EVAL="${PATH_BASE}/eval"
+	export PATH_EVAL_CURRENT="${PATH_EVAL}/${DATE}"
+	export PATH_EVALDATA="${PATH_EVAL_CURRENT}/data"
+	export PATH_EVALOUT="${PATH_EVAL_CURRENT}/report"
+	export EXEC_ENV="$(which env)"
+	export EXEC_BASH="$(which bash)"
+fi
