--- a/common.conf
+++ b/common.conf
@@ -1,16 +1,26 @@
 # this config file contains some common settings for the AHEAD benchmarking, used by several scripts
 
-AHEAD_SCRIPT_BOOTSTRAP="build_bootstrap.sh"
-AHEAD_SCRIPT_BLDSRC="build_sources.sh"
-AHEAD_SCRIPT_GENSSB="generate_ssbdata.sh"
-AHEAD_SCRIPT_CODBEN="coding_benchmark.sh"
+if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
+	echo "sourcing common.conf"
+	export AHEAD_COMMON_CONF=""
 
-AHEAD_DB_PATH="./database"
-AHEAD_SCALEFACTOR_PREFIX="sf-"
-AHEAD_SCALEFACTOR_MIN="1"
-AHEAD_SCALEFACTOR_MAX="1"
+	export AHEAD_SCRIPT_BOOTSTRAP="build_bootstrap.sh"
+	export AHEAD_SCRIPT_BLDSRC="build_sources.sh"
+	export AHEAD_SCRIPT_GENSSB="generate_ssbdata.sh"
+	export AHEAD_SCRIPT_CODBEN="coding_benchmark.sh"
 
-AHEAD_BUILD_BASE_DIR="./build"
-AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
-AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
+	export AHEAD_DB_PATH="./database"
+	export AHEAD_SCALEFACTOR_PREFIX="sf-"
+	export AHEAD_SCALEFACTOR_MIN="1"
+	export AHEAD_SCALEFACTOR_MAX="1"
 
+	export AHEAD_BUILD_BASE_DIR="./build"
+	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
+	export AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
+
+	export AHEAD_PAPER_PATH="./paper"
+	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
+	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
+else
+	echo "common.conf already sourced!"
+fi
