git update-index --chmod=-x improve bash script wording in generate_ssbdata.sh
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -51,7 +51,10 @@ ENDIF(NOT EXISTS "${PCMDIR}" OR NOT EXISTS "${LIBPCMDIR}")
 IF(NOT EXISTS "${LIBPCMDIR}/libpcm.so")
 	MESSAGE(STATUS "Generating PCM library")
 	EXECUTE_PROCESS(
-		COMMAND make
+		COMMAND nproc
+		OUTPUT_VARIABLE NPROC)
+	EXECUTE_PROCESS(
+		COMMAND make -j${NPROC}
 		WORKING_DIRECTORY "${LIBPCMDIR}")
 ENDIF(NOT EXISTS "${LIBPCMDIR}/libpcm.so")
 
