more fixes and towards generating coding_benchmark and modular inverse graphs
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "pcm"]
 	path = pcm
-	url = https://github.com/tuddbresilience/pcm.git
+	url = https://github.com/brics-db/pcm.git
 [submodule "ssb-dbgen"]
 	path = ssb-dbgen
 	url = https://github.com/valco1994/ssb-dbgen
