--- a/common.conf
+++ b/common.conf
@@ -21,6 +21,8 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_PAPER_PATH="./paper"
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
 	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
+	export AHEAD_PAPER_RESULTS_MB="${AHEAD_PAPER_RESULTS}/microbenchmarks"
+	export AHEAD_PAPER_RESULTS_MI="${AHEAD_PAPER_RESULTS}/microbenchmarks/ext_euclidean"
 else
 	echo "common.conf already sourced!"
 fi
