--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -54,7 +54,7 @@ IF(NOT EXISTS "${LIBPCMDIR}/libpcm.so")
 		COMMAND nproc
 		OUTPUT_VARIABLE NPROC)
 	EXECUTE_PROCESS(
-		COMMAND make -j${NPROC}
+		COMMAND make -j8
 		WORKING_DIRECTORY "${LIBPCMDIR}")
 ENDIF(NOT EXISTS "${LIBPCMDIR}/libpcm.so")
 
