use the SIGMOD2018reproducibility branch for coding_benchmark submodule initialize the coding_benchmark submodule recursively (it needs the segvcatch nested submodule)
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,4 @@
 [submodule "coding_benchmark"]
 	path = coding_benchmark
 	url = https://github.com/brics-db/coding_benchmark
+	branch = SIGMOD2018reproducibility
