use bircs-db fork of ssb-dbgen to fix a compile issue
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/brics-db/pcm.git
 [submodule "ssb-dbgen"]
 	path = ssb-dbgen
-	url = https://github.com/valco1994/ssb-dbgen
+	url = https://github.com/brics-db/ssb-dbgen
 [submodule "coding_benchmark"]
 	path = coding_benchmark
 	url = https://github.com/brics-db/coding_benchmark
