generate SSB data for minbfw experiments small improvements to reproduce script add config settings to common.conf
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -7,12 +7,18 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCRIPT_BOOTSTRAP="build_bootstrap.sh"
 	export AHEAD_SCRIPT_BLDSRC="build_sources.sh"
 	export AHEAD_SCRIPT_GENSSB="generate_ssbdata.sh"
+	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="ssbm-dbsize_scalar"
 	export AHEAD_SCRIPT_CODBEN="coding_benchmark.sh"
 
 	export AHEAD_DB_PATH="./database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
-	export AHEAD_SCALEFACTOR_MAX="10"
+	export AHEAD_SCALEFACTOR_MAX="1"
+	export AHEAD_MINBFW_SUFFIX="-minbfw"
+	export AHEAD_MINBFW_SCALEFACTOR="1"
+	export AHEAD_MINBFW_MIN="1"
+	export AHEAD_MINBFW_MAX="3"
+	export AHEAD_MINBFW_CMDARG="--AN-minbfw"
 
 	export AHEAD_BUILD_BASE_DIR="./build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
