--- a/common.conf
+++ b/common.conf
@@ -4,25 +4,32 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	echo "sourcing common.conf"
 	export AHEAD_COMMON_CONF=""
 
+	######################################################
+	# The following are the names of the scripts to call #
+	######################################################
 	export AHEAD_SCRIPT_BOOTSTRAP="build_bootstrap.sh"
 	export AHEAD_SCRIPT_BLDSRC="build_sources.sh"
 	export AHEAD_SCRIPT_GENSSB="generate_ssbdata.sh"
 	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="ssbm-dbsize_scalar"
 	export AHEAD_SCRIPT_CODBEN="coding_benchmark.sh"
 
+	######################################################
+	# The following are settings for executing AHEAD     #
+	######################################################
 	export AHEAD_DB_PATH="./database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
 	export AHEAD_SCALEFACTOR_MAX="1"
+
+	export AHEAD_BUILD_BASE_DIR="./build"
+	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
+	export AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
+
 	export AHEAD_MINBFW_SUFFIX="-minbfw"
 	export AHEAD_MINBFW_SCALEFACTOR="1"
 	export AHEAD_MINBFW_MIN="1"
 	export AHEAD_MINBFW_MAX="3"
 	export AHEAD_MINBFW_CMDARG="--AN-minbfw"
-
-	export AHEAD_BUILD_BASE_DIR="./build"
-	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
-	export AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
 
 	export AHEAD_PAPER_PATH="./paper"
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
