improvements (to be tested)
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/eval/run.conf
+++ b/eval/run.conf
@@ -7,7 +7,7 @@ if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	source ../common.conf
 
 	[[ -z ${DATE+x} ]] && export DATE="$(date '+%Y-%m-%d_%H-%M')"
-	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(pwd)/.."
+	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(pwd)/$(dirname $0)/.."
 	[[ -z ${PATH_BUILD+x} ]] && export PATH_BUILD="${PATH_BASE}/${AHEAD_BUILD_RELEASE_DIR}"
 	[[ -z ${PATH_DB+x} ]] && export PATH_DB="${PATH_BASE}/${AHEAD_DB_PATH}"
 	[[ -z ${PATH_EVAL+x} ]] && export PATH_EVAL="${PATH_BASE}/eval"
