--- a/common.conf
+++ b/common.conf
@@ -3,25 +3,17 @@
 if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	echo "sourcing common.conf"
 	export AHEAD_COMMON_CONF=""
-
-	######################################################
-	# The following are the names of the scripts to call #
-	######################################################
-	export AHEAD_SCRIPT_BOOTSTRAP="build_bootstrap.sh"
-	export AHEAD_SCRIPT_BLDSRC="build_sources.sh"
-	export AHEAD_SCRIPT_GENSSB="generate_ssbdata.sh"
-	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="ssbm-dbsize_scalar"
-	export AHEAD_SCRIPT_CODBEN="coding_benchmark.sh"
+	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
 
 	######################################################
 	# The following are settings for executing AHEAD     #
 	######################################################
-	export AHEAD_DB_PATH="./database"
+	export AHEAD_DB_PATH="${SOURCE_DIR}/database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
 	export AHEAD_SCALEFACTOR_MAX="1"
 
-	export AHEAD_BUILD_BASE_DIR="./build"
+	export AHEAD_BUILD_BASE_DIR="${SOURCE_DIR}/build"
 	export AHEAD_BUILD_DEBUG_DIR="${AHEAD_BUILD_BASE_DIR}/Debug"
 	export AHEAD_BUILD_RELEASE_DIR="${AHEAD_BUILD_BASE_DIR}/Release"
 
@@ -31,11 +23,20 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_MINBFW_MAX="3"
 	export AHEAD_MINBFW_CMDARG="--AN-minbfw"
 
-	export AHEAD_PAPER_PATH="./paper"
+	export AHEAD_PAPER_PATH="${SOURCE_DIR}/paper"
 	export AHEAD_PAPER_RESULTS="${AHEAD_PAPER_PATH}/results"
 	export AHEAD_PAPER_RESULTS_SSB="${AHEAD_PAPER_RESULTS}/ssb"
 	export AHEAD_PAPER_RESULTS_MB="${AHEAD_PAPER_RESULTS}/microbenchmarks"
 	export AHEAD_PAPER_RESULTS_MI="${AHEAD_PAPER_RESULTS}/microbenchmarks/ext_euclidean"
+
+	######################################################
+	# The following are the names of the scripts to call #
+	######################################################
+	export AHEAD_SCRIPT_BOOTSTRAP="${SOURCE_DIR}/build_bootstrap.sh"
+	export AHEAD_SCRIPT_BLDSRC="${SOURCE_DIR}/build_sources.sh"
+	export AHEAD_SCRIPT_GENSSB="${SOURCE_DIR}/generate_ssbdata.sh"
+	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="${AHEAD_BUILD_RELEASE_DIR}/ssbm-dbsize_scalar"
+	export AHEAD_SCRIPT_CODBEN="${SOURCE_DIR}/coding_benchmark.sh"
 else
 	echo "common.conf already sourced!"
 fi
