--- a/common.conf
+++ b/common.conf
@@ -8,6 +8,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	# The following are settings for executing AHEAD     #
 	######################################################
+	export AHEAD_USE_PCM=1
 	export AHEAD_DB_PATH="${SOURCE_DIR}/database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
@@ -37,6 +38,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCRIPT_GENSSB="${SOURCE_DIR}/generate_ssbdata.sh"
 	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="${AHEAD_BUILD_RELEASE_DIR}/ssbm-dbsize_scalar"
 	export AHEAD_SCRIPT_CODBEN="${SOURCE_DIR}/coding_benchmark.sh"
+	export AHEAD_SCRIPT_MODINV="${SOURCE_DIR}/modular_inverse.sh"
 else
 	echo "common.conf already sourced!"
 fi
