--- a/eval/run.conf
+++ b/eval/run.conf
@@ -5,11 +5,12 @@ if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	export AHEAD_EVAL_RUN_CONF=""
 
 	source ../common.conf
+	SOURCE_PATH="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
 
 	[[ -z ${DATE+x} ]] && export DATE="$(date '+%Y-%m-%d_%H-%M')"
-	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(pwd)/$(dirname $0)/.."
-	[[ -z ${PATH_BUILD+x} ]] && export PATH_BUILD="${PATH_BASE}/${AHEAD_BUILD_RELEASE_DIR}"
-	[[ -z ${PATH_DB+x} ]] && export PATH_DB="${PATH_BASE}/${AHEAD_DB_PATH}"
+	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="${SOURCE_PATH}/.."
+	[[ -z ${PATH_BUILD+x} ]] && export PATH_BUILD="${AHEAD_BUILD_RELEASE_DIR}"
+	[[ -z ${PATH_DB+x} ]] && export PATH_DB="${AHEAD_DB_PATH}"
 	[[ -z ${PATH_EVAL+x} ]] && export PATH_EVAL="${PATH_BASE}/eval"
 	[[ -z ${PATH_EVAL_CURRENT+x} ]] && export PATH_EVAL_CURRENT="${PATH_EVAL}/${DATE}"
 	[[ -z ${PATH_EVALDATA+x} ]] && export PATH_EVALDATA="${PATH_EVAL_CURRENT}/data"
