--- a/common.conf
+++ b/common.conf
@@ -8,7 +8,14 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	######################################################
 	# The following are settings for executing AHEAD     #
 	######################################################
-	export AHEAD_USE_PCM=1
+	[[ -z ${AHEAD_DATE+x} ]] && export AHEAD_DATE="$(date '+%Y-%m-%d_%H-%M')"
+	if [[ $(which systemd-detect-virt &>/dev/null) ]]; then
+		[[ systemd-detect-virt ]] && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
+	else
+		[[ $(dmesg | grep "Hypervisor detected") ]] && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
+	fi
+	# Let's simply only enable PCM when not in a virtual machine, because the dependant code will not run therein anyways
+	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
 	export AHEAD_DB_PATH="${SOURCE_DIR}/database"
 	export AHEAD_SCALEFACTOR_PREFIX="sf-"
 	export AHEAD_SCALEFACTOR_MIN="1"
