--- a/eval/run.conf
+++ b/eval/run.conf
@@ -4,18 +4,35 @@
 if [[ -z ${AHEAD_EVAL_RUN_CONF+x} ]] ; then
 	export AHEAD_EVAL_RUN_CONF=""
 
-	source ../common.conf
-	SOURCE_PATH="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	quit () {
+		echo $0 >&2
+		exit 1
+	}
 
-	[[ -z ${DATE+x} ]] && export DATE="$(date '+%Y-%m-%d_%H-%M')"
-	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="${SOURCE_PATH}/.."
+	SOURCE_PATH="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
+	source "${SOURCE_PATH}/../common.conf" || quit "Could not source file \"common.conf\""
+
+	[[ -z ${PATH_BASE+x} ]] && export PATH_BASE="$(cd "${SOURCE_PATH}/.." >/dev/null && pwd )"
 	[[ -z ${PATH_BUILD+x} ]] && export PATH_BUILD="${AHEAD_BUILD_RELEASE_DIR}"
 	[[ -z ${PATH_DB+x} ]] && export PATH_DB="${AHEAD_DB_PATH}"
 	[[ -z ${PATH_EVAL+x} ]] && export PATH_EVAL="${PATH_BASE}/eval"
-	[[ -z ${PATH_EVAL_CURRENT+x} ]] && export PATH_EVAL_CURRENT="${PATH_EVAL}/${DATE}"
+	[[ -z ${PATH_EVAL_CURRENT+x} ]] && export PATH_EVAL_CURRENT="${PATH_EVAL}/${AHEAD_DATE}"
 	[[ -z ${PATH_EVALDATA+x} ]] && export PATH_EVALDATA="${PATH_EVAL_CURRENT}/data"
 	[[ -z ${PATH_EVALINTER+x} ]] && export PATH_EVALINTER="${PATH_EVAL_CURRENT}/intermediate"
 	[[ -z ${PATH_EVALREPORT+x} ]] && export PATH_EVALREPORT="${PATH_EVAL_CURRENT}/report"
 	[[ -z ${EXEC_ENV+x} ]] && export EXEC_ENV="$(which env)"
 	[[ -z ${EXEC_BASH+x} ]] && export EXEC_BASH="$(which bash)"
+
+	# ATTENTION !!! If you change the following names, then you MUST change the file names in "/paper/01-introduction.tex" as well !!!
+	export PATH_TEASER_RUNTIME_BASENAME="teaser_runtime"
+	export PATH_TEASER_RUNTIME_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.m"
+	export PATH_TEASER_RUNTIME_DATAFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.data"
+	export PATH_TEASER_RUNTIME_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_RUNTIME_BASENAME}.tex"
+	export PATH_TEASER_CONSUMPTION_BASENAME="teaser_consumption"
+	export PATH_TEASER_CONSUMPTION_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.m"
+	export PATH_TEASER_CONSUMPTION_DATAFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.data"
+	export PATH_TEASER_CONSUMPTION_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_CONSUMPTION_BASENAME}.tex"
+	export PATH_TEASER_LEGEND_BASENAME="teaser_legend"
+	export PATH_TEASER_LEGEND_GNUPLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.m"
+	export PATH_TEASER_LEGEND_PLOTFILE="${PATH_EVALREPORT}/${PATH_TEASER_LEGEND_BASENAME}.tex"
 fi
