fix calling correct paths to scalinggovernor.sh and turboboost.sh
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -46,6 +46,8 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCRIPT_GENSSB_EXECUTABLE="${AHEAD_BUILD_RELEASE_DIR}/ssbm-dbsize_scalar"
 	export AHEAD_SCRIPT_CODBEN="${SOURCE_DIR}/coding_benchmark.sh"
 	export AHEAD_SCRIPT_MODINV="${SOURCE_DIR}/modular_inverse.sh"
+	export AHEAD_SCRIPT_TURBOBOOST="${SOURCE_DIR}/turboboost.sh"
+	export AHEAD_SCRIPT_GOVERNOR="${SOURCE_DIR}/scalinggovernor.sh"
 else
 	echo "common.conf already sourced!"
 fi
