several fixes and improvements for the scripts
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/common.conf
+++ b/common.conf
@@ -48,6 +48,38 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	export AHEAD_SCRIPT_MODINV="${SOURCE_DIR}/modular_inverse.sh"
 	export AHEAD_SCRIPT_TURBOBOOST="${SOURCE_DIR}/turboboost.sh"
 	export AHEAD_SCRIPT_GOVERNOR="${SOURCE_DIR}/scalinggovernor.sh"
+
+	######################################################
+	# The following helper functions calls               #
+	# scalinggovernor.sh and turboboost.sh               #
+	######################################################
+	AHEAD_prepare_scalinggovernor_and_turboboost () {
+		if [[ -z ${reproscript+x} ]]; then
+			echo "###########################################################"
+			echo "# For the following tests, for better reproducibilty, we: #"
+			echo "#   * DISABLE turboboost                                  #"
+			echo "#   * set the OS scaling governor to PERFORMANCE          #"
+			echo "#                                                         #"
+			echo "# For that, you need a sudoer account!                    #"
+			echo "#                                                         #"
+			echo -n "#   * turboboost: "
+			sudo "${AHEAD_SCRIPT_TURBOBOOST}" disable && echo "succeeded.                              #" || echo "failed.                                 #"
+			echo -n "#   * scaling governor: "
+			modes=($(sudo "${AHEAD_SCRIPT_GOVERNOR}" avail 0))
+			hasperformance=0
+			for mode in "${modes[@]}"; do
+				if [[ "${mode}" == performance ]]; then
+					hasperformance=1
+					sudo "${AHEAD_SCRIPT_GOVERNOR}" set performance && echo "succeeded.                        #" || echo "failed.                           #"
+					break
+				fi
+			done
+			[[ $hasperformance == 0 ]] && echo "failed. Did not find governor.    #"
+			echo "###########################################################"
+			echo
+		fi
+	}
+	export -f AHEAD_prepare_scalinggovernor_and_turboboost
 else
 	echo "common.conf already sourced!"
 fi
