More fixes. Pull headlines for subscripts out back to reproduction main script. Modular Inverse: write the actually used parameters into the gnuplot file Main reproduction script: add "NOBENCH" phase which does no actual benchmarking, but only runs the plotting commands and uses the previous AHEAD eval date.
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ paper/results/ssb/intermediate
 /paper/results/ssb/teaser_runtime.m
 /paper/results/ssb/teaser_runtime.pdf
 /paper/results/ssb/teaser_runtime.tex
+/date.prev
