--- a/common.conf
+++ b/common.conf
@@ -6,6 +6,11 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	SOURCE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd )"
 
 	######################################################
+	# The following are settings for the modular inverse #
+	######################################################
+	MI_SCRIPTFILE="modulo_inverse.m"
+
+	######################################################
 	# The following are settings for executing AHEAD     #
 	######################################################
 	[[ -z ${AHEAD_DATE+x} ]] && export AHEAD_DATE="$(date '+%Y-%m-%d_%H-%M')"
@@ -14,6 +19,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 	else
 		[[ $(dmesg | grep "Hypervisor detected") ]] && export AHEAD_IS_VM=1 || export AHEAD_IS_VM=0
 	fi
+	export AHEAD_PREVIOUS_DATE_FILE="${SOURCE_DIR}/date.prev"
 	# Let's simply only enable PCM when not in a virtual machine, because the dependant code will not run therein anyways
 	export AHEAD_USE_PCM=$((AHEAD_IS_VM == 1 ? 0 : 1))
 	export AHEAD_DB_PATH="${SOURCE_DIR}/database"
