CMakeLists.txt + tools/CMakeLists.txt: generate restiny_t=32bit executables and remove some commented out code include/util/resilience.hpp: use a macro definition to switch between 16-bit and 32-bit restiny_t common.conf: disable output of the turboboost.sh script, again modular_inverse.sh: fix key names paper/sigmod2018.tex: try to get the linux miktex pdflatex output the same as under Windows (=?Q§%IÄ§'§% LATEX)
Signed-off-by: Till Kolditz <till.kolditz@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,9 @@ set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
 
 set(CMAKE_COLOR_MAKEFILE ON)
-# And optionally
-#set(CMAKE_VERBOSE_MAKEFILE ON)
 
 MESSAGE("AHEAD root CMAKE script. Including lib (Core) and tools (Queries):")
 
-#set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
@@ -38,17 +35,14 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Wall -Wextra -pedantic -Weffc++ -fexceptions -fnon-call-exceptions")
 SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3 -rdynamic")
-#SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
-# see
-# http://stackoverflow.com/questions/11437692/how-to-add-a-custom-build-type-to-cmake-targetting-make
-# for adding custom build types
-#SET(CMAKE_CXX_FLAGS_PROFILEGENERATE "${CMAKE_CXX_FLAGS_PROFILEGENERATE} -O0 -DDEBUG -rdynamic -g -pg -fprofile-generate")
-#SET(CMAKE_CXX_FLAGS_PROFILEUSE "${CMAKE_CXX_FLAGS_PROFILEUSE} -O3 -DNDEBUG -fprofile-use")
 
 INCLUDE(cotire)
 
 INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")
 
+UNSET(RESTINY32)
 ADD_SUBDIRECTORY(lib)
 ADD_SUBDIRECTORY(tools)
 
+SET(RESTINY32 ON)
+ADD_SUBDIRECTORY(tools tools_restiny32)
