--- a/common.conf
+++ b/common.conf
@@ -69,7 +69,7 @@ if [[ -z ${AHEAD_COMMON_CONF+x} ]]; then
 			echo "# For that, you need a sudoer account!                    #"
 			echo "#                                                         #"
 			echo -n "#   * turboboost: "
-			sudo "${AHEAD_SCRIPT_TURBOBOOST}" disable && echo "succeeded.                              #" || echo "failed.                                 #"
+			sudo "${AHEAD_SCRIPT_TURBOBOOST}" disable &>/dev/null && echo "succeeded.                              #" || echo "failed.                                 #"
 			echo -n "#   * scaling governor: "
 			modes=($(sudo "${AHEAD_SCRIPT_GOVERNOR}" avail 0))
 			hasperformance=0
